# wili8jam

./: .gitignore  CMakeLists.txt  PLAN_NOTES.md  SPLORE_NOTES.md  test_p8_run.c
examples/: celeste2.p8
fatfs/: ffsystem.c
lua-5.4.7/src/: lcode.h  lobject.c  luaconf.h  lvm.c
src/: esp_nina.c  esp_nina.h  http_get.c  http_get.h  input.c  input.h  main.cpp  p8_api.c  p8_cart.c  p8_editor.c  p8_editor.h  p8_png.c  p8_preprocess.c  p8_splore.c  p8_splore.h  test_p8_preprocess.c  wiipad.c  wiipad.h
usb-host/: CMakeLists.txt  fwUSBHost.cpp  fwUSBHost.h  fwUSBHostHID.cpp  fwUSBHostHID.h  fwUSBHostHIDController.cpp  fwUSBHostHIDController.h  fwUSBHostXInput.cpp  fwUSBHostXInput.h  tusb_config.h
usb-host/tusb_xinput/: xinput_host.c  xinput_host.h
